--- a/superheroschool-ionic/app/sass/landing/variables.scss
+++ b/superheroschool-ionic/app/sass/landing/variables.scss
@@ -1,1 +1,1 @@
-$bg-img:      '/img/blue.jpg';
+$bg-img:      '../img/blue.jpg';
